[gd_scene load_steps=3 format=3 uid="uid://djl7a6i8t4tv4"]

[ext_resource type="Script" path="res://scenes/ui/menu/options/options.gd" id="1_6trgy"]
[ext_resource type="Theme" uid="uid://tqqtfp7oe2qf" path="res://assets/ui_themes/menu_ui_button_theme.tres" id="1_wo10x"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wo10x")
script = ExtResource("1_6trgy")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Graphics" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Graphics"

[node name="Audio" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Audio"

[node name="Back" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[connection signal="pressed" from="MarginContainer/HBoxContainer/Graphics" to="." method="_on_graphics_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
